# BWXML

./: BWXML.sln  CMakeLists.txt  README.md  make_vs_solution.bat
BWFiles/: BWFiles.vcxproj  BWFiles.vcxproj.filters
BWXML/: BW.hpp  BWCommon.cpp  BWCommon.h  BWReader.cpp  BWReader.h  BWWriter.cpp  BWWriter.h  BWXML.vcxproj  BWXML.vcxproj.filters  Base64.cpp  Base64.h  DataStream.cpp  DataStream.h  main.cpp
demoreader/: BW.hpp  BWCommon.cpp  BWCommon.h  BWReader.cpp  BWReader.h  BWWriter.cpp  BWWriter.h  Base64.cpp  Base64.h  DataStream.cpp  DataStream.h  StreamReader.cpp  StreamReader.h  demoreader.cpp  demoreader.vcxproj  demoreader.vcxproj.filters  main.cpp  stdafx.cpp
